# racr

./: .gitignore  CMakeLists.txt  main.c
engine/: camera.c  camera.h  debug_draw.c  debug_draw.h  gl_funcs.h  light.c  light.h  lod.c  lod.h  material.h  math_types.h  mesh.c  mesh.h  nk_impl.c  nk_impl.h  obj_loader.c  obj_loader.h  physics.c  physics.h  pick.c  pick.h  render_settings.c  render_settings.h  scene.c  scene.h  scene_io.c  scene_io.h  shader.c  shader.h  texture.c  texture.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/nuklear/: nuklear_sdl3_gl3.h
libs/stb/: stb_image.h
scenes/: default.scene
shaders/: basic.frag  basic.vert  pick.frag  pick.vert
